--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     container_name: postgres_db
     restart: always
     environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: 12345678
+      POSTGRES_USER: usuario
+      POSTGRES_PASSWORD: contraseña
       POSTGRES_DB: tienda
     ports:
       - "5432:5432"
@@ -24,10 +24,8 @@ services:
       - db
     environment:
       PORT: 5000
-      DATABASE_URL: "postgresql://usuario:contraseña@db:5432/tienda"
+      DATABASE_URL: "postgresql://root:12345678@db:5432/tienda"
       JWT_SECRET: "clave-secreta-segura"
-      EMAIL_USER: "tu_email@gmail.com"
-      EMAIL_PASS: "tu_contraseña"
     ports:
       - "5000:5000"
     volumes:
