--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     container_name: postgres_db
     restart: always
     environment:
-      POSTGRES_USER: usuario
-      POSTGRES_PASSWORD: contraseña
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: 12345678
       POSTGRES_DB: tienda
     ports:
       - "5432:5432"
@@ -24,7 +24,7 @@ services:
       - db
     environment:
       PORT: 5000
-      DATABASE_URL: "postgresql://root:12345678@db:5432/tienda"
+      DATABASE_URL: "postgresql://usuario:contraseña@db:5432/tienda"
       JWT_SECRET: "clave-secreta-segura"
     ports:
       - "5000:5000"
