--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "svelte": "^5.0.0",
     "axios": "^1.3.5",
-    "svelte": "^5.0.0"
+    "@sveltejs/kit": "^2.17.1",
+    "@sveltejs/adapter-node": "^2.1.2"
   },
   "devDependencies": {
-    "@sveltejs/adapter-node": "^5.2.12",
-    "@sveltejs/kit": "^2.17.1",
-    "autoprefixer": "^10.4.13",
+    "vite": "^6.0.0",
+    "tailwindcss": "^3.3.3",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "vite": "^6.1.0"
+    "autoprefixer": "^10.4.13"
   }
 }
