--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
+		"@types/stripe": "^8.0.416",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -54,6 +55,7 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
-		"nodemailer": "^6.10.0"
+		"nodemailer": "^6.10.0",
+		"stripe": "^17.6.0"
 	}
 }
